_helm/medea-demo/templates/webclient-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webclient
  labels:
    app: webclient
    tier: frontend
spec:
  serviceName: webclient
  replicas: 1
  selector:
    matchLabels:
      app: webclient
      tier: frontend
  template:
    metadata:
      labels:
        app: webclient
        tier: frontend
        version: 0.0.1
    spec:
      containers:
        - name: kurento
          image: alexlapa/medea-demo:edge
          ports:
            - containerPort: 80
          imagePullPolicy: Always
