_helm/medea-demo/templates/webclient-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webclient
  labels:
    app: webclient
    tier: frontend
spec:
  selector:
    app: webclient
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
